[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Sprite/Menu/logo.png" type="Texture" id=1]
[ext_resource path="res://Assets/Scenes/menu.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprite/Menu/GemunuLibre-Light.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Scenes/menu_item.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 3 )

[node name="Menu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
mouse_filter = 2
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 232.293 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
focus_mode = 2
mouse_filter = 2
color = Color( 0.839216, 0.619608, 0.0352941, 0.258824 )

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
mouse_filter = 1
custom_constants/margin_right = 20
custom_constants/margin_top = 90
custom_constants/margin_left = 200
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer"]
margin_left = 200.0
margin_top = 90.0
margin_right = 1900.0
margin_bottom = 1060.0
focus_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/HBoxContainer"]
margin_right = 432.0
margin_bottom = 970.0
focus_mode = 2
custom_constants/separation = 40

[node name="logo" type="TextureRect" parent="ColorRect/MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 432.0
margin_bottom = 404.0
mouse_filter = 0
texture = ExtResource( 1 )

[node name="menu_opcoes" type="VBoxContainer" parent="ColorRect/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 444.0
margin_right = 432.0
margin_bottom = 970.0
focus_mode = 2
size_flags_vertical = 3
custom_constants/separation = 40

[node name="novo_jogo" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes"]
margin_right = 432.0
margin_bottom = 66.0
focus_neighbour_top = NodePath("../sair")
focus_neighbour_bottom = NodePath("../ranking")
focus_next = NodePath("../ranking")
focus_previous = NodePath("../sair")
focus_mode = 2
mouse_filter = 1
custom_colors/font_color = Color( 0.141176, 0.117647, 0.12549, 1 )
custom_fonts/font = SubResource( 1 )
text = "New Game"
align = 1
script = ExtResource( 4 )
scene_name = "tutorial_cutscene"

[node name="Player" type="AudioStreamPlayer" parent="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/novo_jogo"]
autoplay = true
bus = "SFX_UI"

[node name="ranking" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes"]
margin_top = 106.0
margin_right = 432.0
margin_bottom = 172.0
focus_neighbour_top = NodePath("../novo_jogo")
focus_neighbour_bottom = NodePath("../sair")
focus_next = NodePath("../sair")
focus_previous = NodePath("../novo_jogo")
focus_mode = 2
mouse_filter = 0
custom_colors/font_color = Color( 0.141176, 0.117647, 0.12549, 1 )
custom_fonts/font = SubResource( 1 )
text = "Ranking"
align = 1
script = ExtResource( 4 )

[node name="Player" type="AudioStreamPlayer" parent="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/ranking"]
bus = "SFX_UI"

[node name="sair" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes"]
margin_top = 212.0
margin_right = 432.0
margin_bottom = 278.0
focus_neighbour_top = NodePath("../ranking")
focus_neighbour_bottom = NodePath("../novo_jogo")
focus_next = NodePath("../novo_jogo")
focus_previous = NodePath("../ranking")
focus_mode = 2
mouse_filter = 0
custom_colors/font_color = Color( 0.141176, 0.117647, 0.12549, 1 )
custom_fonts/font = SubResource( 1 )
text = "Exit"
align = 1
script = ExtResource( 4 )

[node name="Player" type="AudioStreamPlayer" parent="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/sair"]
bus = "SFX_UI"

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/MarginContainer/HBoxContainer"]
margin_left = 436.0
margin_right = 436.0
margin_bottom = 970.0

[connection signal="focus_entered" from="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/novo_jogo" to="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/novo_jogo" method="_on_focus_entered"]
[connection signal="focus_exited" from="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/novo_jogo" to="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/novo_jogo" method="_on_focus_exited"]
[connection signal="gui_input" from="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/novo_jogo" to="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/novo_jogo" method="_on_gui_input"]
[connection signal="mouse_entered" from="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/novo_jogo" to="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/novo_jogo" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/novo_jogo" to="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/novo_jogo" method="_on_mouse_exited"]
[connection signal="focus_entered" from="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/ranking" to="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/ranking" method="_on_focus_entered"]
[connection signal="focus_exited" from="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/ranking" to="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/ranking" method="_on_focus_exited"]
[connection signal="gui_input" from="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/ranking" to="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/ranking" method="_on_gui_input"]
[connection signal="mouse_entered" from="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/ranking" to="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/ranking" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/ranking" to="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/ranking" method="_on_mouse_exited"]
[connection signal="focus_entered" from="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/sair" to="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/sair" method="_on_focus_entered"]
[connection signal="focus_exited" from="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/sair" to="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/sair" method="_on_focus_exited"]
[connection signal="gui_input" from="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/sair" to="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/sair" method="_on_gui_input"]
[connection signal="mouse_entered" from="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/sair" to="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/sair" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/sair" to="ColorRect/MarginContainer/HBoxContainer/VBoxContainer/menu_opcoes/sair" method="_on_mouse_exited"]
